# latexify_py

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  checks.sh  latexify.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-package.yml  release.yml
docs/: getting_started.md  index.md  parameters.md
examples/: equation.ipynb  examples.ipynb  latexify_examples.ipynb
latexify/: __init__.py  constants.py  core.py  node_visitor_base.py  predefined_variables.py
src/integration_tests/: __init__.py  algorithmic_style_test.py  function_expansion_test.py  integration_utils.py  regression_test.py  utils.py
src/latexify/: __init__.py  _version.py  analyzers.py  analyzers_test.py  ast_utils.py  ast_utils_test.py  config.py  constants.py  core.py  exceptions.py  frontend.py  frontend_test.py  generate_latex.py  generate_latex_test.py  ipython_wrappers.py  latexify_visitor.py  latexify_visitor_test.py  math_symbols.py  math_symbols_test.py  node_visitor_base.py  output.py  parser.py  parser_test.py  temp.py  test_stubs.py  test_utils.py
src/latexify/codegen/: __init__.py  algorithmic_codegen.py  algorithmic_codegen_test.py  codegen_utils.py  codegen_utils_test.py  expression_codegen.py  expression_codegen_test.py  expression_rules.py  expression_rules_test.py  function_codegen.py  function_codegen_match_test.py  function_codegen_test.py  generate_latex.py  generate_latex_test.py  identifier_converter.py  identifier_converter_test.py  latex.py  latex_test.py  latex_utils.py  latex_utils_test.py
src/latexify/transformers/: __init__.py  assignment_reducer.py  assignment_reducer_test.py  aug_assign_replacer.py  aug_assign_replacer_test.py  docstring_remover.py  docstring_remover_test.py  function_expander.py  function_expander_test.py  identifier_replacer.py  identifier_replacer_test.py  prefix_trimmer.py  prefix_trimmer_test.py  transformer_utils.py
tests/: __init__.py  node_visitor_base_test.py  regression_test.py  test_io.py
