[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "latexify-py"
version = "0.1.1"
description = "Generates LaTeX math description from Python functions."
readme = "README.md"
requires-python = ">=3.7, <3.11"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Yusuke Oda", email = "odashi@inspiredco.ai"}
]
keywords = [
    "equation",
    "latex",
    "math",
    "mathematics",
    "tex",
]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "dill>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "black>=22.10",
    "flake8>=5.0",
    "pyproject-flake8>=5.0",
    "pytest>=7.1",
]

[project.urls]
Homepage = "https://github.com/google/latexify_py"
"Bug Tracker" = "https://github.com/google/latexify_py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latexify"]

[tool.flake8]
max-line-length = 88
