[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "latexify-py"
description = "Generates LaTeX math description from Python functions."
readme = "README.md"
requires-python = ">=3.7, <3.13"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Yusuke Oda", email = "odashi@inspiredco.ai"}
]
keywords = [
    "equation",
    "latex",
    "math",
    "mathematics",
    "tex",
]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "dill>=0.3.2",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
dev = [
    "build>=0.8",
    "black>=22.10",
    "flake8>=5.0",
    "isort>=5.10",
    "mypy>=0.991",
    "notebook>=6.5.1",
    "pyproject-flake8>=5.0",
    "pytest>=7.1",
    "twine>=4.0",
]
mypy = [
    "mypy>=0.991",
    "pytest>=7.1",
]

[project.urls]
Homepage = "https://github.com/google/latexify_py"
"Bug Tracker" = "https://github.com/google/latexify_py/issues"

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/latexify"]

[tool.hatch.version]
path = "src/latexify/_version.py"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
